# notehook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  mypy.ini  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  firewall.sh
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: workflow-implementation-plan.md  workflow-spec.md  workflows.md
docs/openapi/: openapi.yaml
docs/openapi/components/schemas/: files-core.yaml  users-accounts.yaml
docs/openapi/paths/: authentication.yaml  files-upload-share-oss.yaml  schedule-summary.yaml  users-accounts.yaml
docs/server-spec/: README.md  files-core.md
openapi/: README.md
openapi/components/schemas/: authentication.yaml  common.yaml  equipment-base-system.yaml  files-upload-share-oss.yaml  schedule-summary.yaml
openapi/paths/: equipment-base-system.yaml  files-core.yaml
scripts/: hash_password.py
specs/: API_CATALOG.md  api-dump.md  authentication.md  equipment-base-system.md  error-codes.md  files-upload-share-oss.md  openapi.yaml  schedule-summary.md  users-accounts.md
specs/components/schemas/: auth.yaml  common.yaml  equipment.yaml  file.yaml  schedule.yaml  share.yaml  summary.yaml  system.yaml  user.yaml
specs/paths/: auth.yaml  equipment.yaml  files-device.yaml  files-web.yaml  schedule.yaml  share.yaml  summary.yaml  system.yaml  user.yaml
