[project]
name = "notehook-workspace"
version = "0.1.0"
description = "Self-hosted Supernote sync server and CLI client (workspace root)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
notehook-protocol = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
